correct toggle-fadeout animation to remove jump

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -54,6 +54,7 @@
   }
   to {
     visibility: hidden;
+    opacity: 0;
   }
 }
 
@@ -68,6 +69,7 @@
   }
   to {
     visibility: hidden;
+    opacity: 0;
   }
 }
 
