--- a/app/scss/utilities/_animations.scss
+++ b/app/scss/utilities/_animations.scss
@@ -40,6 +40,7 @@
 
     to {
         visibility: hidden;
+        opacity: 0;
     }
 }
 
